2002-06-07  John Levon  <moz@compsoc.man.ac.uk>

	* pp/opp_symbol.cpp: kill last of the accursed char
	  arrays

2002-06-07  John Levon  <moz@compsoc.man.ac.uk>

	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h:
	* libutil++/verbose_ostream.h:
	* pp/op_merge.cpp:
	* pp/op_time_options.cpp:
	* pp/oprofpp_options.cpp:
	* pp/op_to_source_options.cpp: remove verbose_ostream
	  in favour of a much simpler solution
 
	* module/oprofile.h: remove dead prototype
 
2002-06-06  John Levon  <moz@compsoc.man.ac.uk>

	* module/x86/Makefile.in:
	* module/Makefile.in: remove 2.91 check, add 2.5 check
 
	* module/compat22.h:
	* module/compat24.h:
	* module/apic_up_compat.h: move to ...

	* module/x86/op_apic.h:
	* module/x86/apic_compat.h: ... here
 
	* module/compat.h: move arch stuff to ...

	* module/x86/arch_compat.h: ... here
 
2002-06-06  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: remove gcc 2.91 check
	* make.common.in: use -Werror even for gcc 2.91
	* gui/oprof_start.cpp:
	* libutil++/op_bfd.cpp:
	* pp/derive_files.cpp:
	* pp/op_to_source.cpp: small tweak for gcc 2.91 and -Werror

2002-06-06  John Levon  <moz@compsoc.man.ac.uk>

	* module/op_rtc.c: use check_range
 
2002-06-06  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: fix typo so non-2.91 is detected
 
	* module/Makefile.in:
	* module/x86/Makefile.in: enable -Werror

	* module/op_dname.c:
	* module/oprofile.h:
	* module/oprofile.c:
	* module/op_util.h:
	* module/op_util.c:
	* module/x86/op_nmi.c: add op_util.h, make
	  op_check_range a function check_range
 
2002-06-06  John Levon  <moz@compsoc.man.ac.uk>

	* module/Makefile.in: use @CC@, add clean for x86

	* module/compat24.h: add path_hash prototype 
 
	* module/x86/Makefile.in: use @CC@, make sure
	  options get picked up
 
2002-06-06  John Levon  <moz@compsoc.man.ac.uk>

	* libutil/op_get_time.c: return "" not NULL
	  on failure, so we don't try to printf NULL
 
	* module/op_dname.c: do_path_hash_2_4 should not be static now 
